--- a/src/styles.css
+++ b/src/styles.css
@@ -56,12 +56,14 @@ ul {
 }
 
 #search-button {
+  font-size: 14px;
   padding: 5px 20px;
-  margin: 15px 5px 0 20px;
+  margin: 17px 5px 0 5px;
 }
 #current-location-button {
-  margin: 15px 0 0 10px;
-  padding: 5px 20px;
+  font-size: 14px;
+  margin: 17px 0 0 10px;
+  padding: 5px 15px;
 }
 .temperature {
   text-align: center;
