--- a/src/styles.css
+++ b/src/styles.css
@@ -15,20 +15,32 @@ h2 {
   font-weight: normal;
 }
 
-h3 {
+h4 {
   text-align: center;
   font-weight: 500px;
   font-size: 35px;
   margin: 15px;
 }
 
-img {
+a {
   margin: 0 auto;
   display: block;
-  padding: 5px 0 10px 0;
+  text-align: center;
+  color: white;
 }
 
-li {
+.currentImage {
+  padding: 5px 0 10px 0;
+  margin: 0 auto;
+  display: block;
+}
+
+.conditions {
+  list-style: none;
+  text-align: center;
+}
+
+.days {
   display: inline-block;
   padding: 4px;
   margin: 6px;
@@ -38,19 +50,6 @@ li {
   text-align: center;
   color: #fff;
   font-size: 13px;
-}
-ul {
-  list-style: none;
-  text-align: center;
-  padding: 0;
-  margin: 0 0 15px 0;
-}
-
-a {
-  margin: 0 auto;
-  display: block;
-  text-align: center;
-  color: white;
 }
 
 .fas {
@@ -62,16 +61,28 @@ a {
   margin: 15px 0 15px 20px;
 }
 
+#description {
+  text-align: center;
+}
+
 #search-button {
   font-size: 14px;
-  padding: 5px 20px;
-  margin: 17px 5px 0 5px;
+  padding: 5px 15px;
+  margin: 17px 2px 0 8px;
 }
 #current-location-button {
   font-size: 14px;
-  margin: 17px 0 0 10px;
+  margin: 17px 0 0 5px;
   padding: 5px 15px;
 }
+
+#forecast {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  margin: 0 0 15px 0;
+}
+
 .temperature {
   text-align: center;
   padding: 0;
@@ -84,8 +95,8 @@ a {
 .weatherapp {
   border: 2px solid grey;
   border-radius: 10px;
-  max-width: 650px;
-  margin: 3px;
+  max-width: 550px;
+  margin: 5px auto;
   display: block;
   background-image: url(https://images.pexels.com/photos/1828305/pexels-photo-1828305.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
   font-family: "Quicksand", sans-serif;
