--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,8 @@ h4 {
   font-weight: 500px;
   font-size: 35px;
   margin: 15px;
+  color: black;
+  font-family: "Be Vietnam Pro", sans-serif;
 }
 
 a {
@@ -31,18 +33,7 @@ a {
 .conditions {
   list-style: none;
   text-align: center;
-}
-
-.days {
-  display: inline-block;
-  padding: 4px;
-  margin: 6px;
-  border: 2px solid #fff;
-  border-radius: 5px;
-  width: 83px;
-  text-align: center;
-  color: #fff;
-  font-size: 13px;
+  color: black;
 }
 
 .fas {
@@ -50,6 +41,7 @@ a {
   color: black;
   padding: 5px;
 }
+
 .form-control {
   margin: 15px 0 15px 20px;
 }
@@ -82,7 +74,25 @@ a {
   background-image: url(https://images.pexels.com/photos/1828305/pexels-photo-1828305.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
   font-family: "Quicksand", sans-serif;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
 
+.weather-forecast-date {
+  font-size: 16px;
+  color: black;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.7;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
+  color: black;
+}
 #current-location-button {
   font-size: 14px;
   margin: 17px 0 0 5px;
@@ -91,13 +101,6 @@ a {
 
 #description {
   text-align: center;
-}
-
-#forecast {
-  list-style: none;
-  text-align: center;
-  padding: 0;
-  margin: 0 0 15px 0;
 }
 
 #icon {
