--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ a {
 }
 
 .units {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .weatherapp {
@@ -92,6 +92,10 @@ a {
 .weather-forecast-temperature {
   font-size: 13px;
   color: black;
+}
+
+#celsius-link {
+  padding: 0 0 30px 0;
 }
 #current-location-button {
   font-size: 14px;
