--- a/src/styles.css
+++ b/src/styles.css
@@ -17,17 +17,11 @@ h2 {
 
 h4 {
   text-align: center;
-  font-weight: 500px;
+  font-weight: 200px;
   font-size: 35px;
   margin: 15px;
   color: black;
-  font-family: "Be Vietnam Pro", sans-serif;
-}
-
-a {
-  margin: 0 auto;
-  text-align: center;
-  color: white;
+  font-family: "Quicksand", sans-serif;
 }
 
 .conditions {
@@ -49,6 +43,7 @@ a {
 .repository {
   display: block;
   margin: 0 auto;
+  text-align: center;
 }
 
 .temperatureDisplay {
@@ -59,10 +54,22 @@ a {
   color: #fff;
   border: 2px solid #fff;
   border-radius: 10px;
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: lighter;
+}
+
+.temperatureDisplay .active {
+  color: white;
+  cursor: default;
+  text-decoration: none;
+}
+
+.temperatureDisplay .active:hover {
+  text-decoration: none;
 }
 
 .units {
-  font-size: 25px;
+  text-decoration: none;
 }
 
 .weatherapp {
@@ -94,9 +101,6 @@ a {
   color: black;
 }
 
-#celsius-link {
-  padding: 0 0 30px 0;
-}
 #current-location-button {
   font-size: 14px;
   margin: 17px 0 0 5px;
